// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MediaPlayer Renders the AMP player when platform is AMP 1`] = `
<html>
  <head>
    <script
      type="application/ld+json"
    >
      {"video":{"@list":[{"@type":"VideoObject","name":"Five things ants can teach us about management","description":"They may be tiny, but us humans could learn a thing or two from ants.","duration":191,"thumbnailUrl":"https://ichef.test.bbci.co.uk/images/ic/1024x576/p01k6mtv.jpg","uploadDate":1540218932000}]}}
    </script>
    <script
      async="true"
      custom-element="amp-iframe"
      src="https://cdn.ampproject.org/v0/amp-iframe-0.1.js"
    />
  </head>
  <body>
    .c1 {
  padding-top: 56.25%;
  position: relative;
  overflow: hidden;
}

.c0 {
  grid-column: 1 / span 6;
}

@media (max-width:25rem) {
  .c0 {
    padding: 0 0.5rem;
  }
}

@media (min-width:25rem) and (max-width:62.9375rem) {
  .c0 {
    padding: 0 1rem;
  }
}

@media (min-width:37.5rem) {
  .c0 {
    grid-column: 1 / span 5;
    max-width: 83.33%;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c0 {
    grid-column: 3 / span 5;
    max-width: 37.75rem;
  }
}

@media (min-width:80rem) {
  .c0 {
    grid-column: 6 / span 10;
    max-width: 38.5rem;
  }
}

@supports (display:grid) {
  .c0 {
    max-width: initial;
  }
}

<div>
      <div
        class="c0"
      >
        <div
          class="c1"
        >
          <amp-iframe
            allowfullscreen="allowfullscreen"
            frameborder="0"
            layout="fill"
            sandbox="allow-scripts allow-same-origin"
            src="https://www.test.bbc.com/ws/av-embeds/articles/foo/p01k6msp/en-GB/amp"
            title="Media player"
          >
            <amp-img
              layout="fill"
              placeholder="true"
              src="https://ichef.test.bbci.co.uk/images/ic/512xn/p01k6mtv.jpg"
            />
          </amp-iframe>
        </div>
      </div>
    </div>
  </body>
</html>
`;

exports[`MediaPlayer Renders the AMP player with a caption 1`] = `
<html>
  <head>
    <script
      type="application/ld+json"
    >
      {"video":{"@list":[{"@type":"VideoObject","name":"Five things ants can teach us about management","description":"They may be tiny, but us humans could learn a thing or two from ants.","duration":191,"thumbnailUrl":"https://ichef.test.bbci.co.uk/images/ic/1024x576/p01k6mtv.jpg","uploadDate":1540218932000}]}}
    </script>
    <script
      async="true"
      custom-element="amp-iframe"
      src="https://cdn.ampproject.org/v0/amp-iframe-0.1.js"
    />
  </head>
  <body>
    .c3 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.c1 {
  padding-top: 56.25%;
  position: relative;
  overflow: hidden;
}

.c2 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: italic;
  color: #6E6E73;
  padding: 0.5rem 0.5rem 0;
  width: 100%;
}

.c2 > p {
  padding-bottom: 1.5rem;
  margin: 0;
}

.c2 > p:last-child {
  padding-bottom: 0;
}

.c2 i {
  font-style: normal;
}

.c0 {
  grid-column: 1 / span 6;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c2 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .c2 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width:25rem) and (max-width:62.9375rem) {
  .c2 {
    padding: 0.5rem 1rem 0;
  }
}

@media (min-width:63rem) {
  .c2 {
    padding: 0.5rem 0 0;
  }
}

@media (max-width:25rem) {
  .c0 {
    padding: 0 0.5rem;
  }
}

@media (min-width:25rem) and (max-width:62.9375rem) {
  .c0 {
    padding: 0 1rem;
  }
}

@media (min-width:37.5rem) {
  .c0 {
    grid-column: 1 / span 5;
    max-width: 83.33%;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c0 {
    grid-column: 3 / span 5;
    max-width: 37.75rem;
  }
}

@media (min-width:80rem) {
  .c0 {
    grid-column: 6 / span 10;
    max-width: 38.5rem;
  }
}

@supports (display:grid) {
  .c0 {
    max-width: initial;
  }
}

<div>
      <div
        class="c0"
      >
        <div
          class="c1"
        >
          <amp-iframe
            allowfullscreen="allowfullscreen"
            frameborder="0"
            layout="fill"
            sandbox="allow-scripts allow-same-origin"
            src="https://www.test.bbc.com/ws/av-embeds/articles/foo/p01k6msp/en-GB/amp"
            title="Media player"
          >
            <amp-img
              layout="fill"
              placeholder="true"
              src="https://ichef.test.bbci.co.uk/images/ic/512xn/p01k6mtv.jpg"
            />
          </amp-iframe>
        </div>
        <figcaption
          class="c2"
        >
          <span
            class="c3"
          >
            Video caption, 
          </span>
          <p>
            Media Player With Caption
          </p>
        </figcaption>
      </div>
    </div>
  </body>
</html>
`;

exports[`MediaPlayer Renders the canonical player placeholder when platform is canonical 1`] = `
.c8 {
  vertical-align: middle;
  margin: 0 0.25rem;
  color: #222222;
  fill: currentColor;
  width: 0.75rem;
  height: 0.75rem;
}

.c9 {
  display: block;
  width: 100%;
  visibility: visible;
}

.c6 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.c4 {
  background-color: #222222;
  border: none;
  color: #FFFFFF;
  cursor: pointer;
  display: block;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  font-size: 0.75rem;
  line-height: 1rem;
  height: 5rem;
  padding: 0;
  -webkit-transition: background-color 300ms;
  transition: background-color 300ms;
  width: 5rem;
}

.c4:hover,
.c4:focus {
  background-color: #B80000;
  -webkit-transition: background-color 300ms;
  transition: background-color 300ms;
}

.c7 > svg {
  color: #FFFFFF;
  fill: currentColor;
  height: 1.5rem;
  width: 1.5rem;
}

.c3 {
  cursor: pointer;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

.c5 {
  position: absolute;
  bottom: 0;
}

.c2:hover .c5,
.c2:focus .c5 {
  background-color: #B80000;
}

.c1 {
  padding-top: 56.25%;
  position: relative;
  overflow: hidden;
}

.c0 {
  grid-column: 1 / span 6;
}

@media (max-width:25rem) {
  .c0 {
    padding: 0 0.5rem;
  }
}

@media (min-width:25rem) and (max-width:62.9375rem) {
  .c0 {
    padding: 0 1rem;
  }
}

@media (min-width:37.5rem) {
  .c0 {
    grid-column: 1 / span 5;
    max-width: 83.33%;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c0 {
    grid-column: 3 / span 5;
    max-width: 37.75rem;
  }
}

@media (min-width:80rem) {
  .c0 {
    grid-column: 6 / span 10;
    max-width: 38.5rem;
  }
}

@supports (display:grid) {
  .c0 {
    max-width: initial;
  }
}

<html>
  <head>
    <script
      type="application/ld+json"
    >
      {"video":{"@list":[{"@type":"VideoObject","name":"Five things ants can teach us about management","description":"They may be tiny, but us humans could learn a thing or two from ants.","duration":191,"thumbnailUrl":"https://ichef.test.bbci.co.uk/images/ic/1024x576/p01k6mtv.jpg","uploadDate":1540218932000}]}}
    </script>
  </head>
  <body>
    <div>
      <div
        class="c0"
      >
        <div
          class="c1"
        >
          <div
            class="c2 c3"
          >
            <button
              class="c4 c5"
            >
              <span
                class="c6"
              >
                Play video, "Dummy title"
              </span>
              <div
                aria-hidden="true"
                class="c7"
              >
                <svg
                  class="c8"
                  focusable="false"
                  height="12px"
                  viewBox="0 0 32 32"
                  width="12px"
                >
                  <polygon
                    points="3,32 29,16 3,0"
                  />
                </svg>
              </div>
            </button>
            <img
              alt="Image Alt"
              class="c9"
              src="https://ichef.test.bbci.co.uk/images/ic/512xn/p01k6mtv.jpg"
            />
          </div>
        </div>
      </div>
    </div>
  </body>
</html>
`;

exports[`MediaPlayer Renders the canonical player with a caption 1`] = `
<html>
  <head>
    <script
      type="application/ld+json"
    >
      {"video":{"@list":[{"@type":"VideoObject","name":"Five things ants can teach us about management","description":"They may be tiny, but us humans could learn a thing or two from ants.","duration":191,"thumbnailUrl":"https://ichef.test.bbci.co.uk/images/ic/1024x576/p01k6mtv.jpg","uploadDate":1540218932000}]}}
    </script>
  </head>
  <body>
    .c8 {
  vertical-align: middle;
  margin: 0 0.25rem;
  color: #222222;
  fill: currentColor;
  width: 0.75rem;
  height: 0.75rem;
}

.c9 {
  display: block;
  width: 100%;
  visibility: visible;
}

.c6 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.c4 {
  background-color: #222222;
  border: none;
  color: #FFFFFF;
  cursor: pointer;
  display: block;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  font-size: 0.75rem;
  line-height: 1rem;
  height: 5rem;
  padding: 0;
  -webkit-transition: background-color 300ms;
  transition: background-color 300ms;
  width: 5rem;
}

.c4:hover,
.c4:focus {
  background-color: #B80000;
  -webkit-transition: background-color 300ms;
  transition: background-color 300ms;
}

.c7 > svg {
  color: #FFFFFF;
  fill: currentColor;
  height: 1.5rem;
  width: 1.5rem;
}

.c3 {
  cursor: pointer;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

.c5 {
  position: absolute;
  bottom: 0;
}

.c2:hover .c5,
.c2:focus .c5 {
  background-color: #B80000;
}

.c1 {
  padding-top: 56.25%;
  position: relative;
  overflow: hidden;
}

.c10 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: italic;
  color: #6E6E73;
  padding: 0.5rem 0.5rem 0;
  width: 100%;
}

.c10 > p {
  padding-bottom: 1.5rem;
  margin: 0;
}

.c10 > p:last-child {
  padding-bottom: 0;
}

.c10 i {
  font-style: normal;
}

.c0 {
  grid-column: 1 / span 6;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c10 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .c10 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width:25rem) and (max-width:62.9375rem) {
  .c10 {
    padding: 0.5rem 1rem 0;
  }
}

@media (min-width:63rem) {
  .c10 {
    padding: 0.5rem 0 0;
  }
}

@media (max-width:25rem) {
  .c0 {
    padding: 0 0.5rem;
  }
}

@media (min-width:25rem) and (max-width:62.9375rem) {
  .c0 {
    padding: 0 1rem;
  }
}

@media (min-width:37.5rem) {
  .c0 {
    grid-column: 1 / span 5;
    max-width: 83.33%;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c0 {
    grid-column: 3 / span 5;
    max-width: 37.75rem;
  }
}

@media (min-width:80rem) {
  .c0 {
    grid-column: 6 / span 10;
    max-width: 38.5rem;
  }
}

@supports (display:grid) {
  .c0 {
    max-width: initial;
  }
}

<div>
      <div
        class="c0"
      >
        <div
          class="c1"
        >
          <div
            class="c2 c3"
          >
            <button
              class="c4 c5"
            >
              <span
                class="c6"
              >
                Play video, "Dummy title"
              </span>
              <div
                aria-hidden="true"
                class="c7"
              >
                <svg
                  class="c8"
                  focusable="false"
                  height="12px"
                  viewBox="0 0 32 32"
                  width="12px"
                >
                  <polygon
                    points="3,32 29,16 3,0"
                  />
                </svg>
              </div>
            </button>
            <img
              alt="Image Alt"
              class="c9"
              src="https://ichef.test.bbci.co.uk/images/ic/512xn/p01k6mtv.jpg"
            />
          </div>
        </div>
        <figcaption
          class="c10"
        >
          <span
            class="c6"
          >
            Video caption, 
          </span>
          <p>
            Media Player With Caption
          </p>
        </figcaption>
      </div>
    </div>
  </body>
</html>
`;
